--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-watch": "^5.0.1",
-    "node-normalize-scss": "^8.1.2"
+    "node-normalize-scss": "^8.1.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
