--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "gulp-cli": "^2.3.0",
     "gulp-less": "^5.0.0",
+    "jquery": "^3.6.0",
     "normalize": "^0.3.1",
     "normalize.css": "^8.0.1",
     "npm-watch": "^0.9.0",
@@ -18,6 +19,7 @@
     "gulp-watch": "^5.0.1",
     "node-normalize-scss": "^8.1.2",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-stream": "^7.0.0"
   }
 }
